Senior_Project/src/senior/project/test/server/errors/ServerInvalidPasswordException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidPasswordException extends Exception {

  public ServerInvalidPasswordException(String msg) {
    super(msg);
  }
}
